[package]
name = "http-client"
version = "7.0.0-alpha.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/http-client"
documentation = "https://docs.rs/http-client"
description = "Types and traits for http clients."
keywords = ["http", "service", "client", "futures", "async"]
categories = ["asynchronous", "web-programming", "web-programming::http-client", "web-programming::websocket"]
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
    "dignifiedquire <me@dignifiedquire.com>",
    "Jeremiah Senkpiel <fishrock123@rocketmail.com>"
]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
docs = ["h1-client", "isahc0_9-client", "wasm-client", "hyper0_14-client", "h1-rustls", "h1-native-tls"]

h1-client = ["async-h1", "async-std", "dashmap", "deadpool", "futures"]
native-client = ["isahc0_9-client", "wasm-client"]
isahc0_9-client = ["isahc", "async-std"]
wasm-client = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "futures", "async-std", "send_wrapper"]
hyper0_14-client = ["hyper0_14", "http-types/hyperium_http", "futures-util", "tokio1"]

h1-rustls = ["async-rustls", "rustls_crate", "webpki-roots"]
h1-native-tls = ["async-native-tls"]

hyper0_14-rustls = ["hyper0_14-rustls-lib", "rustls_crate"]
hyper0_14-native-tls = ["hyper0_14-tls-lib"]

[dependencies]
async-trait = "0.1"
http-types = "2.3"
log = "0.4"
cfg-if = "1.0"

# h1-client
async-h1 = { version = "2.0", optional = true }
async-std = { version = "1.6", default-features = false, optional = true }
dashmap = { version = "5.3.4", optional = true }
deadpool = { version = "0.7", optional = true }
futures = { version = "0.3", optional = true }

# h1-client + h1-rustls
# async-tls = { version = "0.11", optional = true }
async-rustls = { version = "0.3", optional = true }
webpki-roots = { version = "0.22", optional = true }

# h1-client + h1-native-tls
async-native-tls = { version = "0.4", optional = true }

# hyper0_14-client
hyper0_14 = { package = "hyper", version = "0.14", features = ["client", "http1", "tcp", "stream"], optional = true }
futures-util = { version = "0.3", features = ["io"], optional = true }
tokio1 = { package = "tokio", version = "1", features = ["time"], optional = true }

# hyper0_14-client + hyper0_14-rustls
hyper0_14-rustls-lib = { package = "hyper-rustls", version = "0.23", optional = true }

# hyper0_14-client + hyper0_14-native-tls
hyper0_14-tls-lib = { package = "hyper-tls", version = "0.5", optional = true }

# h1-rustls or hyper0_14-rustls
rustls_crate = { package = "rustls", version = "0.20", optional = true }

# isahc0_9-client
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
isahc = { version = "0.9", optional = true, default-features = false, features = ["http2"]  }

# wasm-client
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.25", optional = true }
wasm-bindgen = { version = "0.2.48", optional = true }
wasm-bindgen-futures = { version = "0.4.5", optional = true }
futures = { version = "0.3.1", optional = true }
send_wrapper = { version = "0.6.0", features = ["futures"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.25"
optional = true
features = [
    "AbortSignal",
    "Headers",
    "ObserverCallback",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Window",
    "WorkerGlobalScope",
]

[dev-dependencies]
async-std = { version = "1.6", features = ["unstable", "attributes"] }
portpicker = "0.1"
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
tide-rustls = { version = "0.3" }
tokio1 = { package = "tokio", version = "1", features = ["macros", "rt-multi-thread"] }
hyper0_14 = { package = "hyper", version = "0.14", features = ["server"] }
serde = "1.0"
serde_json = "1.0"
mockito = "0.31"

[dev-dependencies.getrandom]
version = "0.2"
features = ["js"]
